10-10-2025(meta data)
