# app/Models/MataData.php
@@ -11,20 +11,30 @@ class MataData extends Model
     use HasFactory, HasUuids;
 
     protected $table = 'mata_data';
+    
     protected $primaryKey = 'mata_id';
+    
     public $incrementing = false;
+    
     protected $keyType = 'string';
 
     protected $fillable = [
         'device_name',
         'device_type',
         'last_login_time',
+        'logout_time',
+        'is_logout',
         'user_id',
     ];
 
-    protected $casts = [
-        'last_login_time' => 'datetime',
-    ];
+    protected function casts(): array
+    {
+        return [
+            'last_login_time' => 'datetime',
+            'logout_time' => 'datetime',
+            'is_logout' => 'boolean',
+        ];
+    }
 
     // Relationship with User
     public function user()
